--- a/scss/section/skills.scss
+++ b/scss/section/skills.scss
@@ -61,6 +61,9 @@
 					transition: opacity .3s ease-in-out;
 					border-radius: 50%;
 					opacity: 0;
+					@media screen and (max-width: 40em) { 
+						display: none;
+					}
 				}
 			}	
 		}
